[gd_scene load_steps=12 format=3 uid="uid://bu0gc6dcyd6p0"]

[ext_resource type="Script" path="res://main/ui/gameover/GameOver.gd" id="1_x24q7"]
[ext_resource type="Texture2D" uid="uid://cm8yw5l71mhy8" path="res://main/ui/gameover/gameover.png" id="2_e65r4"]
[ext_resource type="Shader" path="res://main/player/invert.gdshader" id="2_mur12"]
[ext_resource type="Texture2D" uid="uid://bau6s2cnj3srq" path="res://main/ui/gameover/retry.png" id="3_kwmtx"]
[ext_resource type="Texture2D" uid="uid://dyxnam0g244x6" path="res://main/ui/gameover/retry_pressed.png" id="4_rw8vf"]
[ext_resource type="Texture2D" uid="uid://c1v261aait5o" path="res://main/ui/gameover/retry_hover.png" id="5_bqv4u"]
[ext_resource type="PackedScene" uid="uid://cs3xt5co6hn0i" path="res://main/ui/controls/quitbutton/QuitButton.tscn" id="6_irbh4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_egohn"]
shader = ExtResource("2_mur12")

[sub_resource type="Animation" id="Animation_kex7u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2fhpj"]
resource_name = "gameover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfgnj"]
_data = {
"RESET": SubResource("Animation_kex7u"),
"gameover": SubResource("Animation_2fhpj")
}

[node name="GameOver" type="CanvasLayer"]
layer = 0
script = ExtResource("1_x24q7")

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_egohn")
layout_mode = 2
texture = ExtResource("2_e65r4")

[node name="RetryButton" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_kwmtx")
texture_pressed = ExtResource("4_rw8vf")
texture_hover = ExtResource("5_bqv4u")

[node name="QuitButton" parent="CenterContainer/PanelContainer/VBoxContainer" instance=ExtResource("6_irbh4")]
layout_mode = 2
size_flags_horizontal = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yfgnj")
}

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
